# SDM-Semantic-Data-Management

./: .gitmodules  README.md
LAB/KnowledgeGraphs/: .gitignore  GroupIvanWalter-B1-MartinezTroiani.rdfs  GroupIvanWalter-B1-MartinezTroiani.ttl  GroupIvanWalter-B2-MartinezTroiani.ttl  README.md  pyproject.toml  requirements.txt  run.sh
LAB/KnowledgeGraphs/.streamlit/: config.toml
LAB/KnowledgeGraphs/abox_data_raw/: edges_author_corresponds_paper.csv  edges_author_reviews_paper.csv  edges_author_writes_paper.csv  edges_edition_has_proceedings.csv  edges_edition_held_for_conference.csv  edges_edition_held_for_workshop.csv  edges_paper_cites_paper.csv  edges_paper_has_review.csv  edges_paper_published_in_edition.csv  edges_paper_published_in_volume.csv  edges_proceedings_includes_paper.csv  edges_volume_issued_by_journal.csv  nodes_author.csv  nodes_conference.csv  nodes_edition.csv  nodes_journal.csv  nodes_paper.csv  nodes_proceedings.csv  nodes_review.csv  nodes_volume.csv  nodes_workshop.csv
LAB/KnowledgeGraphs/data/: graph_export.tsv
LAB/KnowledgeGraphs/data/data/: users.js
LAB/KnowledgeGraphs/data/work/: runtime.properties
LAB/KnowledgeGraphs/models/: model_comparison.csv
LAB/KnowledgeGraphs/models/complex_model/: results.json
LAB/KnowledgeGraphs/models/distmult_model/: results.json  trained_model.pkl
LAB/KnowledgeGraphs/models/rotate_model/: results.json
LAB/KnowledgeGraphs/queries/: default.rq  query1.rq  query2.rq
LAB/KnowledgeGraphs/src/: abox_descriptive_stats.ipynb  abox_descriptive_stats_updated.ipynb  synthetic_abox_data.py
(+21 files in other folders)
