[project]
name = "knowledgegraphs"
version = "0.1.0"
description = ""
authors = [
    {name = "eZWALT",email = "walter.jose.troiani@estudiantat.upc.edu"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.12"

pykeen = "^1.10.0"
rdflib = "^7.0.0"
sparqlwrapper = "^2.0.0"
pandas = "^2.2.2"
networkx = "^3.2"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
scikit-learn = "^1.4.2"
tqdm = "^4.66.4"
graphviz = "^0.20.1"
torch = "^2.2.2"
torchvision = "^0.17.2"